.snakemake/log/2022-05-31T121813.446272.snakemake.log
Full Traceback (most recent call last):
  File "/opt/miniconda3/envs/snakemake/lib/python3.9/site-packages/snakemake/__init__.py", line 591, in snakemake
    workflow.include(
  File "/opt/miniconda3/envs/snakemake/lib/python3.9/site-packages/snakemake/workflow.py", line 1173, in include
    exec(compile(code, snakefile, "exec"), self.globals)
  File "/home/jeszyman/repos/cfdna-wgs/workflow/int_test.smk", line 56, in <module>
  File "/opt/miniconda3/envs/snakemake/lib/python3.9/site-packages/snakemake/workflow.py", line 1173, in include
    exec(compile(code, snakefile, "exec"), self.globals)
  File "/home/jeszyman/repos/cfdna-wgs/workflow/read_preprocess.smk", line 126
    Alignment deduplication and sorting
              ^
SyntaxError: invalid syntax

SyntaxError in line 65 of /home/jeszyman/repos/cfdna-wgs/workflow/read_preprocess.smk:
invalid syntax
  File "/home/jeszyman/repos/cfdna-wgs/workflow/int_test.smk", line 36, in <module>
